--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,18 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
+    "strictPropertyInitialization": false,
+    "noImplicitAny": false,
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "useDefineForClassFields": false,
+    "paths": {
+      "@angular/*": ["./node_modules/@angular/*"],
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
